--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
 
 <body>
 
-    <p class="upSelect">pp</p>
-    <p class="rightSelect">pp</p>
-    <p class="leftSelect">pp</p>
-    <p class="downSelect">pp</p>
-    <p class="trainstatus">Not yet trained</p>
+    <p class="pics-taken">
+
+        up: <span class="pics-up">?</span>
+        down: <span class="pics-down">?</span>
+        left: <span class="pics-left">?</span>
+        right: <span class="pics-right">?</span>
+        
+    </p>
+    <p class="position">
+        x: <span class="posx">?</span>
+        <br>
+        y: <span class="posy">?</span>
+    </p>
+
+    <p class="train-wrapper">
+        Status: <span class="train-status">?</span>
+    </p>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.js"></script>
