--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <p class="train-wrapper">
         Status: <span class="train-status">?</span>
+        You are now: <span class="result-status">?</span>
     </p>
     
     
